# imdb-review-classifier

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
configs/: baseline.yaml
data/raw/: .gitignore  imdb_dataset.csv.dvc
dvc_plots/: index.html
imdb_review_classifier/pipelines/: data_split.py  evaluate.py  featurize.py  train.py
imdb_review_classifier/utils/: load_helpers.py
models/: .gitignore
notebooks/: 30-03-2023-show-data.ipynb
report/metrics/: .gitignore
requirements/: requirements-dev.txt  requirements.txt
