[tool.poetry]
name = "imdb-review-classifier"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@gmail.com>"]
readme = "README.md"
packages = [{include = "imdb_review_classifier"}]

[tool.poetry.dependencies]
python = "^3.9.13"
dvc = "^2.51.0"
kaggle = "^1.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
