[tool.poetry]
name = "imdb-review-classifier"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@gmail.com>"]
readme = "README.md"
packages = [{include = "imdb_review_classifier"}]

[tool.poetry.dependencies]
python = "^3.9.13"
dvc = "^2.51.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
kaggle = "^1.5.13"
torch = "^2.0.0"
black = "^23.3.0"
mypy = "^1.1.1"
pylint = "^2.17.1"
bandit = "^1.7.5"
jupyterlab = "^3.6.2"
coverage = "^7.2.2"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
